examples/test/testpolicy1562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1562
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key25: value1
      key44: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value39
          key5: value46
          key13: value12
      podSelector:
        matchLabels:
          key24: value45
          key35: value7
